--- a/admin.html
+++ b/admin.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Admin — Bharath Vishal</title>
+<title>Admin – Bharath Vishal</title>
 <style>
   :root{--bg:#0f1115;--muted:#9aa3ad}
   body{background:var(--bg);color:#e6eef6;font-family:Inter,system-ui,Arial;margin:0;padding:24px}
   .card{background:rgba(255,255,255,0.03);border-radius:12px;padding:20px;margin-bottom:20px}
-  input,textarea{width:100%;padding:8px;margin:6px 0;border-radius:8px;border:1px solid rgba(255,255,255,0.08);background:rgba(0,0,0,0.15);color:#fff;font-size:15px}
+  input,textarea{width:100%;padding:8px;margin:6px 0;border-radius:8px;border:1px solid rgba(255,255,255,0.08);background:rgba(0,0,0,0.15);color:#fff;font-size:15px;box-sizing:border-box}
   textarea{min-height:80px}
   button{background:#2563eb;border:none;color:#fff;padding:9px 14px;border-radius:8px;cursor:pointer;margin-top:6px}
   button.ghost{background:transparent;border:1px solid rgba(255,255,255,0.1)}
@@ -19,6 +19,13 @@
   .flex{display:flex;justify-content:space-between;align-items:center;gap:6px;flex-wrap:wrap}
   .small{font-size:13px;color:var(--muted)}
   .img-preview{max-width:100%;margin-top:8px;border-radius:8px}
+  label{display:block;margin-top:8px;font-size:13px;color:var(--muted)}
+  
+  @media(max-width:768px){
+    body{padding:12px}
+    .card{padding:14px}
+    input,textarea,button{font-size:14px}
+  }
 </style>
 </head>
 <body>
@@ -30,7 +37,7 @@
 
 <div id="panel" class="hidden">
   <div class="card">
-    <h1>Site Editor — Bharath Vishal</h1>
+    <h1>Site Editor – Bharath Vishal</h1>
     <div class="small">Edit content, then click <b>Save & Download site-data.json</b>, and upload it to your GitHub repo root.</div>
     <button onclick="saveJSON()">💾 Save & Download site-data.json</button>
   </div>
@@ -43,6 +50,16 @@
   <div class="card">
     <h2>Skills (comma separated)</h2>
     <input id="skills" placeholder="Python, AI/ML, Product Management">
+  </div>
+
+  <div class="card">
+    <div class="flex"><h2>Experience</h2><button onclick="addExperience()">+ Add Experience</button></div>
+    <div id="experience" class="list"></div>
+  </div>
+
+  <div class="card">
+    <div class="flex"><h2>Education</h2><button onclick="addEducation()">+ Add Education</button></div>
+    <div id="education" class="list"></div>
   </div>
 
   <div class="card">
@@ -66,6 +83,11 @@
   </div>
 
   <div class="card">
+    <h2>Contact Email</h2>
+    <input id="contactEmail" placeholder="your@email.com">
+  </div>
+
+  <div class="card">
     <h2>Upload Helper</h2>
     <p>Select any file to upload to your GitHub repo (images, PDFs, JSON).</p>
     <input type="file" id="filePicker">
@@ -80,7 +102,17 @@
 const PASSWORD="*Bharath1";
 const OWNER="bharath-vishal";
 const REPO="bharath-vishal.github.io";
-let data={about:"",skills:[],projects:[],blogs:[],certifications:[],resumeUrl:"resume.pdf"};
+let data={
+  about:"",
+  skills:[],
+  experience:[],
+  education:[],
+  projects:[],
+  blogs:[],
+  certifications:[],
+  resumeUrl:"resume.pdf",
+  contactEmail:""
+};
 
 function login(){
   if(document.getElementById('pass').value===PASSWORD){
@@ -91,7 +123,16 @@ function login(){
 }
 
 async function loadExisting(){
-  try{const r=await fetch('site-data.json');if(r.ok){data=await r.json();}}
+  try{
+    const r=await fetch('site-data.json');
+    if(r.ok){
+      data=await r.json();
+      // Ensure new fields exist
+      if(!data.experience) data.experience=[];
+      if(!data.education) data.education=[];
+      if(!data.contactEmail) data.contactEmail="";
+    }
+  }
   catch(e){console.log(e);}
   render();
 }
@@ -101,7 +142,64 @@ function render(){
   document.getElementById('about').value=data.about||"";
   document.getElementById('skills').value=(data.skills||[]).join(', ');
   document.getElementById('resume').value=data.resumeUrl||"resume.pdf";
-  renderProjects();renderBlogs();renderCerts();
+  document.getElementById('contactEmail').value=data.contactEmail||"";
+  renderExperience();
+  renderEducation();
+  renderProjects();
+  renderBlogs();
+  renderCerts();
+}
+
+/* ---------- EXPERIENCE ---------- */
+function renderExperience(){
+  const c=document.getElementById('experience');c.innerHTML='';
+  (data.experience||[]).forEach((exp,i)=>{
+    const d=document.createElement('div');d.className='item';
+    d.innerHTML=`
+      <div class="flex"><b>${exp.title||'Experience '+(i+1)}</b>
+        <div>
+          <button class="ghost" onclick="moveItem(data.experience,${i},-1,renderExperience)">↑</button>
+          <button class="ghost" onclick="moveItem(data.experience,${i},1,renderExperience)">↓</button>
+          <button class="danger" onclick="delItem(data.experience,${i},renderExperience)">✕</button>
+        </div>
+      </div>
+      <label>Job Title</label><input value="${exp.title||''}" onchange="data.experience[${i}].title=this.value">
+      <label>Company</label><input value="${exp.company||''}" onchange="data.experience[${i}].company=this.value">
+      <label>Duration (e.g., Jan 2020 - Present)</label><input value="${exp.duration||''}" onchange="data.experience[${i}].duration=this.value">
+      <label>Description</label><textarea onchange="data.experience[${i}].description=this.value">${exp.description||''}</textarea>
+    `;
+    c.appendChild(d);
+  });
+}
+function addExperience(){
+  data.experience.push({title:"Job Title",company:"Company Name",duration:"Jan 2023 - Present",description:""});
+  renderExperience();
+}
+
+/* ---------- EDUCATION ---------- */
+function renderEducation(){
+  const c=document.getElementById('education');c.innerHTML='';
+  (data.education||[]).forEach((edu,i)=>{
+    const d=document.createElement('div');d.className='item';
+    d.innerHTML=`
+      <div class="flex"><b>${edu.degree||'Education '+(i+1)}</b>
+        <div>
+          <button class="ghost" onclick="moveItem(data.education,${i},-1,renderEducation)">↑</button>
+          <button class="ghost" onclick="moveItem(data.education,${i},1,renderEducation)">↓</button>
+          <button class="danger" onclick="delItem(data.education,${i},renderEducation)">✕</button>
+        </div>
+      </div>
+      <label>Degree</label><input value="${edu.degree||''}" onchange="data.education[${i}].degree=this.value">
+      <label>Institution</label><input value="${edu.institution||''}" onchange="data.education[${i}].institution=this.value">
+      <label>Year (e.g., 2018 - 2022)</label><input value="${edu.year||''}" onchange="data.education[${i}].year=this.value">
+      <label>Description</label><textarea onchange="data.education[${i}].description=this.value">${edu.description||''}</textarea>
+    `;
+    c.appendChild(d);
+  });
+}
+function addEducation(){
+  data.education.push({degree:"Bachelor's Degree",institution:"University Name",year:"2018 - 2022",description:""});
+  renderEducation();
 }
 
 /* ---------- PROJECTS ---------- */
@@ -119,11 +217,12 @@ function renderProjects(){
       </div>
       <label>PDF URL</label><input value="${p.pdfUrl||''}" onchange="data.projects[${i}].pdfUrl=this.value">
       <label>Title</label><input value="${p.title||''}" onchange="data.projects[${i}].title=this.value">
+      <label>Description</label><textarea onchange="data.projects[${i}].description=this.value">${p.description||''}</textarea>
     `;
     c.appendChild(d);
   });
 }
-function addProject(){data.projects.push({title:"New Project",pdfUrl:"project.pdf"});renderProjects();}
+function addProject(){data.projects.push({title:"New Project",pdfUrl:"project.pdf",description:""});renderProjects();}
 
 /* ---------- BLOGS ---------- */
 function renderBlogs(){
@@ -186,8 +285,11 @@ function saveJSON(){
   data.about=document.getElementById('about').value;
   data.skills=document.getElementById('skills').value.split(',').map(x=>x.trim()).filter(Boolean);
   data.resumeUrl=document.getElementById('resume').value||'resume.pdf';
+  data.contactEmail=document.getElementById('contactEmail').value||'';
   const blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
   const a=document.createElement('a');a.href=URL.createObjectURL(blob);a.download='site-data.json';a.click();
+  document.getElementById('status').textContent='✓ Saved! Upload site-data.json to GitHub.';
+  setTimeout(()=>document.getElementById('status').textContent='',3000);
 }
 
 /* ---------- GITHUB SCAN ---------- */
@@ -197,7 +299,7 @@ async function scanProjects(){
     const r=await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/`);
     if(!r.ok)throw new Error(r.status);
     const files=await r.json();
-    const pdfs=files.filter(f=>f.type==='file'&&f.name.endsWith('.pdf')).map(f=>({pdfUrl:f.name,title:f.name.replace(/[-_]/g,' ').replace('.pdf','')}));
+    const pdfs=files.filter(f=>f.type==='file'&&f.name.endsWith('.pdf')).map(f=>({pdfUrl:f.name,title:f.name.replace(/[-_]/g,' ').replace('.pdf',''),description:''}));
     const existing=data.projects.map(p=>p.pdfUrl);
     pdfs.forEach(p=>{if(!existing.includes(p.pdfUrl))data.projects.push(p);});
     renderProjects();
