--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div class="photo-container">
-      <div class="photo"><img id="heroPhoto" src="photo.png" alt="Bharath photo"></div>
+      <div class="photo"><img id="heroPhoto" src="Images/photo.png" alt="Bharath photo"></div>
     </div>
   </section>
 
