--- a/index.html
+++ b/index.html
@@ -264,19 +264,21 @@ async function loadSite() {
     // PROJECTS
     const projDiv = document.getElementById('projectsGrid');
     projDiv.innerHTML = (data.projects || [])
-      .map(p => `
+      .map(p => {
+        const pdfPath = p.pdfUrl.includes('/') ? p.pdfUrl : `Projects/${p.pdfUrl}`;
+        return `
         <div class="project-item">
           <h3>${p.title || p.pdfUrl}</h3>
           ${p.description ? `<p>${p.description}</p>` : ''}
           ${
             p.pdfUrl
-              ? `<iframe class="project-frame" src="${p.pdfUrl}#toolbar=0&navpanes=0" 
+              ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0" 
                    title="${p.title || 'Project PDF Preview'}"></iframe>`
               : ''
           }
           ${
             p.pdfUrl
-              ? `<p><a href="${p.pdfUrl}" target="_blank" class="btn">📄 View Full PDF</a></p>`
+              ? `<p><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
               : ''
           }
           ${
@@ -285,7 +287,8 @@ async function loadSite() {
               : ''
           }
         </div>
-      `)
+      `;
+      })
       .join('');
 
     // BLOGS
@@ -299,8 +302,8 @@ async function loadSite() {
         <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g, '&quot;')})">
           ${
             blog.image
-              ? `<div style="height:160px;overflow:hidden;border-radius:10px;margin-bottom:10px">
-                   <img src="${blog.image}" alt="${blog.title}" style="width:100%;height:100%;object-fit:cover;">
+              ? `<div style="height:200px;overflow:hidden;border-radius:10px;margin-bottom:10px;background:#1b2430">
+                   <img src="${blog.image}" alt="${blog.title}" style="width:100%;height:100%;object-fit:contain;object-position:center;">
                  </div>`
               : ''
           }
