--- a/index.html
+++ b/index.html
@@ -50,17 +50,20 @@
 
   /* Blog Carousel - Responsive */
   .carousel-container{position:relative;overflow:hidden;margin-top:12px}
-  .carousel{display:flex;gap:16px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(255,255,255,0.2) transparent;padding-bottom:8px}
+  .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(255,255,255,0.2) transparent;padding-bottom:8px}
   .carousel::-webkit-scrollbar{height:8px}
   .carousel::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.2);border-radius:4px}
-  .blog-card{min-width:280px;background:rgba(255,255,255,0.03);padding:18px;border-radius:14px;
-             cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0}
+  .blog-card{min-width:360px;max-width:360px;background:rgba(255,255,255,0.03);padding:0;border-radius:14px;
+             cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0;overflow:hidden}
   .blog-card:hover{background:rgba(255,255,255,0.05);transform:translateY(-4px);
                    box-shadow:0 8px 24px rgba(0,0,0,0.3)}
-  .blog-card h3{margin:10px 0 6px 0;font-size:1.1rem}
-  .blog-card .date{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
-  .blog-card .excerpt{color:var(--muted);font-size:0.9rem;display:-webkit-box;
-                      -webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden}
+  .blog-card-image{width:100%;height:240px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
+  .blog-card-image img{width:100%;height:100%;object-fit:cover;object-position:center}
+  .blog-card-content{padding:18px}
+  .blog-card h3{margin:0 0 8px 0;font-size:1.05rem;line-height:1.3}
+  .blog-card .date{color:var(--muted);font-size:0.85rem;margin-bottom:10px}
+  .blog-card .excerpt{color:var(--muted);font-size:0.9rem;line-height:1.5;display:-webkit-box;
+                      -webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
   .carousel-nav{display:flex;justify-content:center;gap:12px;margin-top:16px;flex-wrap:wrap}
   .carousel-btn{background:rgba(255,255,255,0.05);border:1px solid rgba(255,255,255,0.08);
                 padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s}
@@ -302,14 +305,16 @@ async function loadSite() {
         <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g, '&quot;')})">
           ${
             blog.image
-              ? `<div style="height:200px;overflow:hidden;border-radius:10px;margin-bottom:10px;background:#1b2430">
-                   <img src="${blog.image}" alt="${blog.title}" style="width:100%;height:100%;object-fit:contain;object-position:center;">
+              ? `<div class="blog-card-image">
+                   <img src="${blog.image}" alt="${blog.title}">
                  </div>`
               : ''
           }
-          <h3>${blog.title}</h3>
-          <div class="date">${blog.date || ''}</div>
-          <div class="excerpt">${blog.subheading || ''}</div>
+          <div class="blog-card-content">
+            <h3>${blog.title}</h3>
+            <div class="date">${blog.date || ''}</div>
+            <div class="excerpt">${blog.subheading || ''}</div>
+          </div>
         </div>
       `)
       .join('');
