--- a/index.html
+++ b/index.html
@@ -9,64 +9,72 @@
   :root {
     --bg:#0f1115;
     --muted:#9aa3ad;
-    --glass: rgba(255,255,255,0.04);
+    --body-text:#d1dce6;
+    --brand-blue:#2563eb;
+    --glass: rgba(255,255,255,0.03);
     font-family: Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   }
   html,body{height:100%;margin:0;background:var(--bg);color:#e6eef6;}
   .page{max-width:1100px;margin:36px auto;padding:28px;}
   
   /* Header - Responsive */
-  header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px;gap:16px;flex-wrap:wrap}
+  header{display:flex;align-items:center;justify-content:space-between;margin-bottom:22px;gap:16px;flex-wrap:wrap}
   .header-left{display:flex;align-items:center;gap:12px}
   .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(90deg,#1abcff22,#7b61ff22);
         display:flex;align-items:center;justify-content:center;font-weight:700;flex-shrink:0}
   .nav{display:flex;gap:12px;flex-wrap:wrap}
-  .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap}
-  .nav a:hover{background:rgba(255,255,255,0.03);color:#fff}
+  .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
+  .nav a:hover{background:var(--glass);color:#fff}
   
   /* Hero - Responsive Grid */
   .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
-        border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6)}
+        border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
   .photo-container{display:flex;flex-direction:column;align-items:center;gap:20px;order:1}
   .hero-content{order:2}
+  .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
+  .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
   .photo{width:280px;height:280px;border-radius:50%;overflow:hidden;
          border:4px solid rgba(255,255,255,0.08);background:#1b2430;display:flex;align-items:center;
          justify-content:center;box-shadow:0 12px 40px rgba(0,0,0,0.4)}
   .photo img{width:100%;height:100%;object-fit:cover}
   
-  .card{background:rgba(255,255,255,0.02);padding:18px;border-radius:14px;margin-top:12px}
+  .card{background:var(--glass);padding:18px;border-radius:14px;margin-top:12px;border:1px solid rgba(255,255,255,0.05)}
+  .card b{font-size:1.1rem;display:block;margin-bottom:12px}
   .skills{display:flex;flex-wrap:wrap;gap:8px}
-  .skill{border:1px solid rgba(255,255,255,0.05);padding:6px 10px;border-radius:10px;font-size:0.9rem;color:var(--muted)}
-  main{margin-top:18px;display:grid;gap:22px}
-  .section{padding:18px;border-radius:12px;background:transparent;border:1px solid rgba(255,255,255,0.03)}
+  .skill{border:1px solid rgba(255,255,255,0.08);padding:6px 10px;border-radius:10px;font-size:0.9rem;color:var(--muted);background:rgba(255,255,255,0.02)}
+  
+  main{margin-top:22px;display:grid;gap:22px}
+  .section{padding:18px;border-radius:12px;background:var(--glass);border:1px solid rgba(255,255,255,0.05)}
+  .section h2{font-size:1.5rem;margin:0 0 16px 0}
+  .section p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
 
   /* Experience & Education */
   .timeline{margin-top:16px;display:grid;gap:16px}
-  .timeline-item{background:rgba(255,255,255,0.02);padding:16px;border-radius:12px;border-left:3px solid rgba(37,99,235,0.5)}
+  .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border-left:3px solid var(--brand-blue);border:1px solid rgba(255,255,255,0.05);border-left:3px solid var(--brand-blue)}
   .timeline-item h3{margin:0 0 8px 0;font-size:1.1rem}
-  .timeline-item .company{color:#60a5fa;font-weight:500;margin-bottom:4px}
+  .timeline-item .company{color:var(--brand-blue);font-weight:500;margin-bottom:4px}
   .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
-  .timeline-item .description{color:#d1dce6;line-height:1.6;font-size:0.95rem}
+  .timeline-item .description{color:var(--body-text);line-height:1.6;font-size:0.95rem}
 
   /* Blog Carousel - Responsive */
   .carousel-container{position:relative;overflow:hidden;margin-top:12px}
   .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(255,255,255,0.2) transparent;padding-bottom:8px}
   .carousel::-webkit-scrollbar{height:8px}
   .carousel::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.2);border-radius:4px}
-  .blog-card{min-width:360px;max-width:360px;background:rgba(255,255,255,0.03);padding:0;border-radius:14px;
+  .blog-card{min-width:360px;max-width:360px;background:var(--glass);padding:0;border-radius:14px;
              cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0;overflow:hidden}
   .blog-card:hover{background:rgba(255,255,255,0.05);transform:translateY(-4px);
                    box-shadow:0 8px 24px rgba(0,0,0,0.3)}
-  .blog-card-image{width:100%;height:240px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
+  .blog-card-image{width:100%;height:200px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
   .blog-card-image img{width:100%;height:100%;object-fit:cover;object-position:center}
   .blog-card-content{padding:18px}
-  .blog-card h3{margin:0 0 8px 0;font-size:1.05rem;line-height:1.3}
+  .blog-card h3{margin:0 0 8px 0;font-size:1.1rem;line-height:1.3}
   .blog-card .date{color:var(--muted);font-size:0.85rem;margin-bottom:10px}
-  .blog-card .excerpt{color:var(--muted);font-size:0.9rem;line-height:1.5;display:-webkit-box;
+  .blog-card .excerpt{color:var(--body-text);font-size:0.95rem;line-height:1.5;display:-webkit-box;
                       -webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
   .carousel-nav{display:flex;justify-content:center;gap:12px;margin-top:16px;flex-wrap:wrap}
-  .carousel-btn{background:rgba(255,255,255,0.05);border:1px solid rgba(255,255,255,0.08);
-                padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s}
+  .carousel-btn{background:var(--glass);border:1px solid rgba(255,255,255,0.08);
+                padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s;font-size:0.95rem}
   .carousel-btn:hover{background:rgba(255,255,255,0.08)}
 
   /* Blog Page */
@@ -79,23 +87,27 @@
   .blog-header .subheading{font-size:1.2rem;color:var(--muted);margin-bottom:16px;line-height:1.4}
   .blog-header .meta{color:var(--muted);font-size:0.9rem}
   .blog-body{line-height:1.8;font-size:1.05rem}
-  .blog-body p{margin:20px 0;color:#d1dce6}
+  .blog-body p{margin:20px 0;color:var(--body-text)}
   .blog-image{margin:30px 0;text-align:center}
   .blog-image img{max-width:100%;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,0.4);border:1px solid rgba(255,255,255,0.05)}
   .blog-image figcaption{margin-top:12px;color:var(--muted);font-size:0.9rem;font-style:italic}
-  .close-blog{position:fixed;top:20px;right:28px;background:rgba(255,255,255,0.05);
+  .close-blog{position:fixed;top:20px;right:28px;background:var(--brand-blue);
               border:1px solid rgba(255,255,255,0.1);padding:10px 20px;border-radius:12px;
-              cursor:pointer;color:#e6eef6;transition:.2s;z-index:1001;font-size:0.95rem}
-  .close-blog:hover{background:rgba(255,255,255,0.1)}
+              cursor:pointer;color:#fff;transition:.2s;z-index:1001;font-size:0.95rem;font-weight:500}
+  .close-blog:hover{background:#1d4ed8;box-shadow:0 4px 12px rgba(37,99,235,0.4)}
 
   /* Projects - Responsive Grid */
-  .project-frame{width:100%;height:480px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.03)}
+  .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
   .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:16px}
-  .project-item{background:rgba(255,255,255,0.02);padding:16px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
+  .project-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
+  .project-item h3{font-size:1.1rem;margin:0 0 12px 0}
+  .project-item p{color:var(--body-text);font-size:0.95rem;line-height:1.6;margin:0 0 16px 0}
   
-  footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.9rem}
-  .btn{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:12px;color:var(--muted);text-decoration:none;display:inline-block;transition:.2s}
-  .btn:hover{background:rgba(255,255,255,0.03)}
+  footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.9rem;padding:20px 0}
+  .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:8px 16px;border-radius:12px;color:var(--muted);text-decoration:none;display:inline-block;transition:.2s;font-size:0.95rem}
+  .btn:hover{background:var(--glass);color:#fff;border-color:rgba(255,255,255,0.12)}
+  .btn-primary{background:var(--brand-blue);color:#fff;border-color:var(--brand-blue)}
+  .btn-primary:hover{background:#1d4ed8;border-color:#1d4ed8;box-shadow:0 4px 12px rgba(37,99,235,0.4)}
 
   /* Responsive Breakpoints */
   @media(min-width:768px){
@@ -192,7 +204,7 @@
 
     <section class="section" id="resume">
       <h2>Resume</h2>
-      <a id="resumeLink" class="btn" href="resume.pdf" target="_blank">📄 View Resume</a>
+      <a id="resumeLink" class="btn btn-primary" href="resume.pdf" target="_blank">📄 View Resume</a>
     </section>
 
     <section class="section" id="contact">
@@ -281,12 +293,12 @@ async function loadSite() {
           }
           ${
             p.pdfUrl
-              ? `<p><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
+              ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
               : ''
           }
           ${
             p.link
-              ? `<p><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>`
+              ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>`
               : ''
           }
         </div>
