--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
   .page{max-width:1100px;margin:36px auto;padding:28px;}
   
   /* Header - Responsive */
-  header{display:flex;align-items:center;justify-content:space-between;margin-bottom:22px;gap:16px;flex-wrap:wrap}
-  .header-left{display:flex;align-items:center;gap:12px}
-  .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(90deg,#1abcff22,#7b61ff22);
-        display:flex;align-items:center;justify-content:center;font-weight:700;flex-shrink:0}
+  header{display:flex;align-items:center;justify-content:flex-end;margin-bottom:22px;gap:16px;flex-wrap:wrap}
   .nav{display:flex;gap:12px;flex-wrap:wrap}
   .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
   .nav a:hover{background:var(--glass);color:#fff}
@@ -50,7 +47,7 @@
 
   /* Experience & Education */
   .timeline{margin-top:16px;display:grid;gap:16px}
-  .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border-left:3px solid var(--brand-blue);border:1px solid rgba(255,255,255,0.05);border-left:3px solid var(--brand-blue)}
+  .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
   .timeline-item h3{margin:0 0 8px 0;font-size:1.1rem}
   .timeline-item .company{color:var(--brand-blue);font-weight:500;margin-bottom:4px}
   .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
@@ -120,7 +117,7 @@
   
   @media(max-width:767px){
     .page{padding:16px;margin:16px auto}
-    header{flex-direction:column;align-items:flex-start}
+    header{justify-content:flex-start}
     .nav{width:100%;justify-content:flex-start}
     .hero{padding:20px}
     .photo{width:200px;height:200px}
@@ -132,7 +129,6 @@
   
   @media(max-width:480px){
     .nav a{font-size:0.9rem;padding:5px 8px}
-    .logo{width:36px;height:36px;font-size:0.85rem}
     .blog-card{min-width:240px}
   }
 </style>
@@ -140,13 +136,6 @@
 <body>
 <div class="page" id="mainPage">
   <header>
-    <div class="header-left">
-      <div class="logo">BV</div>
-      <div>
-        <div style="font-weight:700">Bharath Vishal</div>
-        <div style="font-size:12px;color:var(--muted)">Product Analyst · AI automation · Design systems</div>
-      </div>
-    </div>
     <nav class="nav">
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
