--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     --bg:#0f1115;
     --muted:#9aa3ad;
     --body-text:#d1dce6;
-    --brand-blue:#2563eb;
+    --brand-green:#1db954;
+    --brand-green-hover:#1ed760;
     --glass: rgba(255,255,255,0.03);
     font-family: Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   }
@@ -31,7 +32,7 @@
   .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
   .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
   .photo{width:280px;height:280px;border-radius:50%;overflow:hidden;
-         border:4px solid rgba(255,255,255,0.08);background:#1b2430;display:flex;align-items:center;
+         border:4px solid rgba(29,185,84,0.2);background:#1b2430;display:flex;align-items:center;
          justify-content:center;box-shadow:0 12px 40px rgba(0,0,0,0.4)}
   .photo img{width:100%;height:100%;object-fit:cover}
   
@@ -49,19 +50,19 @@
   .timeline{margin-top:16px;display:grid;gap:16px}
   .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
   .timeline-item h3{margin:0 0 8px 0;font-size:1.1rem}
-  .timeline-item .company{color:var(--brand-blue);font-weight:500;margin-bottom:4px}
+  .timeline-item .company{color:var(--brand-green);font-weight:500;margin-bottom:4px}
   .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
   .timeline-item .description{color:var(--body-text);line-height:1.6;font-size:0.95rem}
 
   /* Blog Carousel - Responsive */
   .carousel-container{position:relative;overflow:hidden;margin-top:12px}
-  .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(255,255,255,0.2) transparent;padding-bottom:8px}
+  .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(29,185,84,0.3) transparent;padding-bottom:8px}
   .carousel::-webkit-scrollbar{height:8px}
-  .carousel::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.2);border-radius:4px}
+  .carousel::-webkit-scrollbar-thumb{background:rgba(29,185,84,0.3);border-radius:4px}
   .blog-card{min-width:360px;max-width:360px;background:var(--glass);padding:0;border-radius:14px;
              cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0;overflow:hidden}
   .blog-card:hover{background:rgba(255,255,255,0.05);transform:translateY(-4px);
-                   box-shadow:0 8px 24px rgba(0,0,0,0.3)}
+                   box-shadow:0 8px 24px rgba(29,185,84,0.15)}
   .blog-card-image{width:100%;height:200px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
   .blog-card-image img{width:100%;height:100%;object-fit:cover;object-position:center}
   .blog-card-content{padding:18px}
@@ -72,7 +73,7 @@
   .carousel-nav{display:flex;justify-content:center;gap:12px;margin-top:16px;flex-wrap:wrap}
   .carousel-btn{background:var(--glass);border:1px solid rgba(255,255,255,0.08);
                 padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s;font-size:0.95rem}
-  .carousel-btn:hover{background:rgba(255,255,255,0.08)}
+  .carousel-btn:hover{background:rgba(29,185,84,0.1);border-color:rgba(29,185,84,0.3)}
 
   /* Blog Page */
   .blog-page{display:none;position:fixed;inset:0;background:var(--bg);z-index:1000;overflow-y:auto}
@@ -88,10 +89,10 @@
   .blog-image{margin:30px 0;text-align:center}
   .blog-image img{max-width:100%;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,0.4);border:1px solid rgba(255,255,255,0.05)}
   .blog-image figcaption{margin-top:12px;color:var(--muted);font-size:0.9rem;font-style:italic}
-  .close-blog{position:fixed;top:20px;right:28px;background:var(--brand-blue);
+  .close-blog{position:fixed;top:20px;right:28px;background:var(--brand-green);
               border:1px solid rgba(255,255,255,0.1);padding:10px 20px;border-radius:12px;
               cursor:pointer;color:#fff;transition:.2s;z-index:1001;font-size:0.95rem;font-weight:500}
-  .close-blog:hover{background:#1d4ed8;box-shadow:0 4px 12px rgba(37,99,235,0.4)}
+  .close-blog:hover{background:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
 
   /* Projects - Responsive Grid */
   .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
@@ -103,8 +104,8 @@
   footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.9rem;padding:20px 0}
   .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:8px 16px;border-radius:12px;color:var(--muted);text-decoration:none;display:inline-block;transition:.2s;font-size:0.95rem}
   .btn:hover{background:var(--glass);color:#fff;border-color:rgba(255,255,255,0.12)}
-  .btn-primary{background:var(--brand-blue);color:#fff;border-color:var(--brand-blue)}
-  .btn-primary:hover{background:#1d4ed8;border-color:#1d4ed8;box-shadow:0 4px 12px rgba(37,99,235,0.4)}
+  .btn-primary{background:var(--brand-green);color:#fff;border-color:var(--brand-green)}
+  .btn-primary:hover{background:var(--brand-green-hover);border-color:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
 
   /* Responsive Breakpoints */
   @media(min-width:768px){
