--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   /* Hero - Responsive Grid */
   .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
         border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
-  .photo-container{display:flex;flex-direction:column;align-items:center;gap:20px;order:1}
+  .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px;order:1}
   .hero-content{order:2}
   .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
   .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
