--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   html,body{height:100%;margin:0;background:var(--bg);color:#e6eef6;}
   .page{max-width:1100px;margin:36px auto;padding:28px;}
   
-  /* Header - Responsive */
+  /* Header */
   header{display:flex;align-items:center;justify-content:flex-end;margin-bottom:22px;gap:16px;flex-wrap:wrap}
   .nav{display:flex;gap:12px;flex-wrap:wrap}
   .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
   .nav a:hover{background:var(--glass);color:#fff}
   
-  /* Hero - Responsive Grid */
+  /* Hero */
   .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
         border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
   .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px;order:1}
@@ -54,7 +54,7 @@
   .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
   .timeline-item .description{color:var(--body-text);line-height:1.6;font-size:0.95rem}
 
-  /* Blog Carousel - Responsive */
+  /* Blog Carousel */
   .carousel-container{position:relative;overflow:hidden;margin-top:12px}
   .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(29,185,84,0.3) transparent;padding-bottom:8px}
   .carousel::-webkit-scrollbar{height:8px}
@@ -94,7 +94,7 @@
               cursor:pointer;color:#fff;transition:.2s;z-index:1001;font-size:0.95rem;font-weight:500}
   .close-blog:hover{background:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
 
-  /* Projects - Responsive Grid */
+  /* Projects */
   .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
   .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:16px}
   .project-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
@@ -107,30 +107,17 @@
   .btn-primary{background:var(--brand-green);color:#fff;border-color:var(--brand-green)}
   .btn-primary:hover{background:var(--brand-green-hover);border-color:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
 
-  /* Responsive Breakpoints */
+  /* Responsive */
   @media(min-width:768px){
     .hero{grid-template-columns:1fr 400px}
     .hero-content{order:1}
     .photo-container{order:2}
-    .blog-card{min-width:320px}
-    .projects-grid{grid-template-columns:repeat(auto-fit,minmax(320px,1fr))}
   }
-  
   @media(max-width:767px){
     .page{padding:16px;margin:16px auto}
-    header{justify-content:flex-start}
-    .nav{width:100%;justify-content:flex-start}
     .hero{padding:20px}
     .photo{width:200px;height:200px}
     .section{padding:14px}
-    .project-frame{height:320px}
-    .blog-header h1{font-size:1.6rem}
-    .close-blog{top:12px;right:12px;padding:8px 14px;font-size:0.85rem}
-  }
-  
-  @media(max-width:480px){
-    .nav a{font-size:0.9rem;padding:5px 8px}
-    .blog-card{min-width:240px}
   }
 </style>
 </head>
@@ -165,16 +152,8 @@
 
   <main>
     <section class="section" id="about"><h2>About</h2><div id="aboutText"></div></section>
-    
-    <section class="section" id="experience">
-      <h2>Experience</h2>
-      <div class="timeline" id="experienceTimeline"></div>
-    </section>
-
-    <section class="section" id="education">
-      <h2>Education</h2>
-      <div class="timeline" id="educationTimeline"></div>
-    </section>
+    <section class="section" id="experience"><h2>Experience</h2><div class="timeline" id="experienceTimeline"></div></section>
+    <section class="section" id="education"><h2>Education</h2><div class="timeline" id="educationTimeline"></div></section>
     
     <section class="section" id="blogs">
       <h2>Blogs</h2>
@@ -234,84 +213,52 @@ async function loadSite() {
 
     // EXPERIENCE
     const expDiv = document.getElementById('experienceTimeline');
-    if (data.experience && data.experience.length > 0) {
-      expDiv.innerHTML = data.experience
-        .map(exp => `
-          <div class="timeline-item">
-            <h3>${exp.title || ''}</h3>
-            <div class="company">${exp.company || ''}</div>
-            <div class="duration">${exp.duration || ''}</div>
-            ${exp.description ? `<div class="description">${exp.description}</div>` : ''}
-          </div>
-        `)
-        .join('');
-    } else {
-      expDiv.innerHTML = '<p style="color:var(--muted)">No experience added yet.</p>';
-    }
+    expDiv.innerHTML = (data.experience || [])
+      .map(exp => `
+        <div class="timeline-item">
+          <h3>${exp.title || ''}</h3>
+          <div class="company">${exp.company || ''}</div>
+          <div class="duration">${exp.duration || ''}</div>
+          ${exp.description ? `<div class="description">${exp.description}</div>` : ''}
+        </div>
+      `)
+      .join('');
 
     // EDUCATION
     const eduDiv = document.getElementById('educationTimeline');
-    if (data.education && data.education.length > 0) {
-      eduDiv.innerHTML = data.education
-        .map(edu => `
-          <div class="timeline-item">
-            <h3>${edu.degree || ''}</h3>
-            <div class="company">${edu.institution || ''}</div>
-            <div class="duration">${edu.year || ''}</div>
-            ${edu.description ? `<div class="description">${edu.description}</div>` : ''}
-          </div>
-        `)
-        .join('');
-    } else {
-      eduDiv.innerHTML = '<p style="color:var(--muted)">No education added yet.</p>';
-    }
+    eduDiv.innerHTML = (data.education || [])
+      .map(edu => `
+        <div class="timeline-item">
+          <h3>${edu.degree || ''}</h3>
+          <div class="company">${edu.institution || ''}</div>
+          <div class="duration">${edu.year || ''}</div>
+          ${edu.description ? `<div class="description">${edu.description}</div>` : ''}
+        </div>
+      `)
+      .join('');
 
-    // PROJECTS
+    // PROJECTS — updated to use root ppt1.pdf
     const projDiv = document.getElementById('projectsGrid');
     projDiv.innerHTML = (data.projects || [])
       .map(p => {
-        const pdfPath = p.pdfUrl.includes('/') ? p.pdfUrl : `Projects/${p.pdfUrl}`;
+        const pdfPath = p.pdfUrl; // ✅ changed line
         return `
         <div class="project-item">
           <h3>${p.title || p.pdfUrl}</h3>
           ${p.description ? `<p>${p.description}</p>` : ''}
-          ${
-            p.pdfUrl
-              ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0" 
-                   title="${p.title || 'Project PDF Preview'}"></iframe>`
-              : ''
-          }
-          ${
-            p.pdfUrl
-              ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
-              : ''
-          }
-          ${
-            p.link
-              ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>`
-              : ''
-          }
-        </div>
-      `;
+          ${p.pdfUrl ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0"></iframe>` : ''}
+          ${p.pdfUrl ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>` : ''}
+          ${p.link ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>` : ''}
+        </div>`;
       })
       .join('');
 
     // BLOGS
-    const blogs = (data.blogs || [])
-      .filter(b => !/resume/i.test(b.title || ""))
-      .sort((a, b) => new Date(b.date) - new Date(a.date));
-
     const blogDiv = document.getElementById('blogCarousel');
-    blogDiv.innerHTML = blogs
+    blogDiv.innerHTML = (data.blogs || [])
       .map(blog => `
         <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g, '&quot;')})">
-          ${
-            blog.image
-              ? `<div class="blog-card-image">
-                   <img src="${blog.image}" alt="${blog.title}">
-                 </div>`
-              : ''
-          }
+          ${blog.image ? `<div class="blog-card-image"><img src="${blog.image}" alt="${blog.title}"></div>` : ''}
           <div class="blog-card-content">
             <h3>${blog.title}</h3>
             <div class="date">${blog.date || ''}</div>
@@ -321,22 +268,17 @@ async function loadSite() {
       `)
       .join('');
 
-    // RESUME
+    // RESUME + CONTACT
     document.getElementById('resumeLink').href = data.resumeUrl || 'resume.pdf';
-
-    // CONTACT
     if (data.contactEmail) {
       document.getElementById('contactEmail').textContent = data.contactEmail;
       document.getElementById('contactEmail').href = `mailto:${data.contactEmail}`;
     }
   } catch (err) {
-    console.error("Error loading JSON:", err);
-    document.getElementById('aboutText').textContent =
-      "Error loading site-data.json. Check file path or syntax.";
+    console.error("Error loading site-data.json:", err);
   }
 }
 
-// BLOG VIEW HANDLERS
 function openBlog(blog) {
   document.getElementById('mainPage').style.display = 'none';
   document.getElementById('blogPage').classList.add('active');
@@ -344,12 +286,8 @@ function openBlog(blog) {
   document.getElementById('blogSubheading').textContent = blog.subheading || '';
   document.getElementById('blogMeta').textContent = blog.date || '';
   document.getElementById('blogBody').innerHTML = `
-    ${blog.image ? `<figure class="blog-image">
-      <img src="${blog.image}" alt="">
-      ${blog.imageCaption ? `<figcaption>${blog.imageCaption}</figcaption>` : ''}
-    </figure>` : ''}
-    <p>${(blog.content || '').replace(/\n/g, '</p><p>')}</p>
-  `;
+    ${blog.image ? `<figure class="blog-image"><img src="${blog.image}" alt=""><figcaption>${blog.imageCaption || ''}</figcaption></figure>` : ''}
+    <p>${(blog.content || '').replace(/\n/g, '</p><p>')}</p>`;
 }
 
 function closeBlog() {
@@ -358,10 +296,7 @@ function closeBlog() {
 }
 
 function scrollCarousel(dir) {
-  document.getElementById('blogCarousel').scrollBy({
-    left: dir * 400,
-    behavior: 'smooth'
-  });
+  document.getElementById('blogCarousel').scrollBy({left: dir * 400, behavior: 'smooth'});
 }
 
 loadSite();
