--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
   .carousel-btn{background:var(--glass);border:1px solid rgba(255,255,255,0.08);
                 padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s;font-size:0.95rem}
   .carousel-btn:hover{background:rgba(29,185,84,0.1);border-color:rgba(29,185,84,0.3)}
-  .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05);background:#1b2430}
-  .pdf-error{display:none;color:var(--muted);font-size:0.9rem;margin-top:12px;padding:12px;background:rgba(255,193,7,0.1);border:1px solid rgba(255,193,7,0.2);border-radius:8px}
+  .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
   .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:16px}
   .project-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
   .project-item h3{font-size:1.1rem;margin:0 0 12px 0}
@@ -142,27 +141,15 @@ async function loadSite() {
     document.getElementById('educationTimeline').innerHTML = (data.education || []).map(edu => `
       <div class="timeline-item"><h3>${edu.degree}</h3><div class="company">${edu.institution}</div><div class="duration">${edu.year}</div><div class="description">${edu.description}</div></div>`).join('');
 
-    // PROJECTS - Enhanced PDF loading with fallback
+    // PROJECTS
     const projDiv = document.getElementById('projectsGrid');
-    projDiv.innerHTML = (data.projects || []).map((p, idx) => {
+    projDiv.innerHTML = (data.projects || []).map(p => {
       const pdfPath = p.pdfUrl;
       return `<div class="project-item">
         <h3>${p.title}</h3>
         <p>${p.description}</p>
-        <iframe 
-          class="project-frame" 
-          id="pdf-frame-${idx}"
-          src="${pdfPath}#toolbar=0&navpanes=0&view=FitH" 
-          title="${p.title}"
-          onload="handlePdfLoad(${idx}, true)"
-          onerror="handlePdfLoad(${idx}, false)">
-        </iframe>
-        <div class="pdf-error" id="pdf-error-${idx}">
-          ⚠️ PDF preview unavailable in this browser. Please use the button below to view.
-        </div>
-        <p style="margin-top:12px">
-          <a href="${pdfPath}" target="_blank" class="btn btn-primary">📄 Open PDF in New Tab</a>
-        </p>
+        <iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0" title="${p.title}"></iframe>
+        <p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn btn-primary">📄 View Full PDF</a></p>
       </div>`;
     }).join('');
 
@@ -175,49 +162,12 @@ async function loadSite() {
 
     // RESUME & CONTACT
     document.getElementById('resumeLink').href = data.resumeUrl || 'resume.pdf';
-    if (data.contactEmail){
-      document.getElementById('contactEmail').textContent=data.contactEmail;
-      document.getElementById('contactEmail').href=`mailto:${data.contactEmail}`;
-    }
-  } catch (err) {
-    console.error("Error loading JSON:", err);
-  }
+    if (data.contactEmail){document.getElementById('contactEmail').textContent=data.contactEmail;document.getElementById('contactEmail').href=`mailto:${data.contactEmail}`;}
+  } catch (err) {console.error("Error loading JSON:", err);}
 }
-
-function handlePdfLoad(idx, success) {
-  // Check if iframe loaded successfully after a delay
-  setTimeout(() => {
-    const frame = document.getElementById(`pdf-frame-${idx}`);
-    const error = document.getElementById(`pdf-error-${idx}`);
-    
-    try {
-      // Try to access iframe content - will fail if PDF didn't load
-      if (!frame || !frame.contentWindow || frame.contentWindow.location.href === 'about:blank') {
-        if (error) error.style.display = 'block';
-        if (frame) frame.style.display = 'none';
-      }
-    } catch (e) {
-      // Cross-origin or loading error - this is actually normal for PDFs
-      // Don't show error unless we're sure it failed
-      console.log('PDF frame loaded (cross-origin)', idx);
-    }
-  }, 1000);
-}
-
-function openBlog(blog){
-  // Blog modal functionality - implement as needed
-  window.open(blog.url, '_blank');
-}
-
-function closeBlog(){
-  // Close modal functionality
-}
-
-function scrollCarousel(dir){
-  document.getElementById('blogCarousel').scrollBy({left:dir*400,behavior:'smooth'});
-}
-
-// Load site on page load
+function openBlog(blog){window.open(blog.url || '#', '_blank');}
+function closeBlog(){}
+function scrollCarousel(dir){document.getElementById('blogCarousel').scrollBy({left:dir*400,behavior:'smooth'});}
 loadSite();
 </script>
 </body>
